--- a/docs/source/02.playbook.md
+++ b/docs/source/02.playbook.md
@@ -23,7 +23,6 @@ ansible-playbook playbook.yml --list-task   #检查tasks任务
 ansible-playbook playbook.yml --list-hosts   #检查生效的主机
 ```
 
-
 ## Playbook小试牛刀
 
 
@@ -34,37 +33,46 @@ ansible-playbook playbook.yml --list-hosts   #检查生效的主机
 步骤：
 1. 安装httpd包
 2. 使用setup模块获取IP和主机名，并注册成变量
-3.  定义好template名为index.htmls.j2 使用变量语法写入IP和主机名
+3.  定义好template名为index.html.j2 使用变量语法写入IP和主机名
 4. 使用setup获取的变量，修改index.html的内容
 5. 启动httpd服务
 
-提示如下，请自行完成`httpd_deploy.yaml`的编写。
+创建`index.html.j2`
 
-用到的模块
-
-```yaml
-yum:
-  name: httpd
-  state: present
+```HTML
+hello ansible!
 ```
 
-```yaml
-service:
-  name: httpd
-  enabled: true
-  state: started
-```
+
+完成`httpd_deploy.yaml`的编写。
 
 ```yaml
-template:
-  src: /srv/httpd.conf.j2
-  dest: /etc/httpd.conf
+---
+- name: deploy web server              
+  hosts: local
+  tasks:
+    # 安装httpd
+    - name: install httpd                       
+      yum:
+        name: httpd
+        state: present
+    - name: set web service enabled 
+      service:
+        name: httpd
+        enabled: true
+        state: started
+    - name: update httpd config
+      template:
+        src: index.html.j2
+        dest: "/var/www/html/index.html"
+    - name: test httpd
+      uri:
+        url: http://127.0.0.1
+        status_code: 200
 ```
 
-```yaml
-- name: test httpd
-  uri:
-    url: http://127.0.0.1
-    status_code: 200
+运行起来
+```bash
+ansible-playbook httpd_deploy.yaml
 ```
 
