fix default var

--- a/docs/source/04.roles.md
+++ b/docs/source/04.roles.md
@@ -44,9 +44,8 @@ mkdir -p {roles/,roles/webserver/,roles/webserver/tasks/,roles/webserver/templat
     dest: "/var/www/html/index.html"
 ```
 
-### templates 
+### 设置变量 
 
-将 `index.html.j2` 文件放在 `roles/webserver/templates/` 目录下。
 
 在 `roles/webserver/defaults/main.yml` 中定义默认变量。这里可以设置 `my_custom_variable`：
 
@@ -56,6 +55,10 @@ mkdir -p {roles/,roles/webserver/,roles/webserver/tasks/,roles/webserver/templat
 
 my_custom_variable: "Some value"
 ```
+
+### 设置template
+
+将 `index.html.j2` 文件放在 `roles/webserver/templates/` 目录下。
 
 ### 创建 Handlers
 
